// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChartButton decorateWithOverlay should return the component wrapped 1`] = `
<span>
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Popover
        bsClass="popover"
        id="id-test"
        placement="right"
      >
        <div
          className="fake-overlay"
        />
      </Popover>
    }
    placement="top"
    rootClose={true}
    trigger="click"
  >
    <div
      className="fake-button-element"
    />
  </OverlayTrigger>
</span>
`;

exports[`PieChartButton decorateWithTooltip should return the component wrapped with tooltip 1`] = `
<TooltipTrigger
  label="label"
  tooltipPlacement="top"
>
  <div
    className="fake-button-element"
  />
</TooltipTrigger>
`;

exports[`PieChartButton getCircle should get return a path 1`] = `
<path
  d="M0,0Z"
  fill="red"
  stroke="red"
  transform="translate(10,10)"
/>
`;

exports[`PieChartButton getCircle should get return a path with hover color 1`] = `
<path
  d="M0,0Z"
  fill="#66BDFF"
  stroke="#66BDFF"
  transform="translate(10,10)"
/>
`;

exports[`PieChartButton getEmptyPartCircle should get return a path for the rest 1`] = `
<path
  d="M0,0Z"
  fill="purple"
  stroke="purple"
  transform="translate(10,10)"
/>
`;

exports[`Storyshots PieChartButton Loading state 1`] = `
<div
  className="col-lg-offset-2 col-lg-8"
>
  <div>
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      role={null}
      type="button"
    >
      <span>
        changestatus
      </span>
    </button>
    <p>
      Small :
    </p>
    <button
      className="theme-tc-pie-chart-loading tc-pie-chart-loading btn btn-default"
      disabled={false}
      type="button"
    >
      <div
        style={
          Object {
            "borderRadius": "10px",
            "height": "20px",
            "width": "20px",
          }
        }
      />
      <div
        className="theme-tc-pie-chart-loading-skeleton-label tc-pie-chart-loading-skeleton-label"
      />
    </button>
    <p>
      Medium :
    </p>
    <button
      className="theme-tc-pie-chart-loading tc-pie-chart-loading btn btn-default"
      disabled={false}
      type="button"
    >
      <div
        style={
          Object {
            "borderRadius": "17.5px",
            "height": "35px",
            "width": "35px",
          }
        }
      />
      <div
        className="theme-tc-pie-chart-loading-skeleton-label tc-pie-chart-loading-skeleton-label"
      />
    </button>
    <p>
      Large :
    </p>
    <button
      className="theme-tc-pie-chart-loading tc-pie-chart-loading btn btn-default"
      disabled={false}
      type="button"
    >
      <div
        style={
          Object {
            "borderRadius": "25px",
            "height": "50px",
            "width": "50px",
          }
        }
      />
      <div
        className="theme-tc-pie-chart-loading-skeleton-label tc-pie-chart-loading-skeleton-label"
      />
    </button>
    <p>
      Small without label:
    </p>
    <button
      className="theme-tc-pie-chart-loading tc-pie-chart-loading theme-tc-pie-chart-loading-no-label tc-pie-chart-loading-no-label btn btn-default"
      disabled={false}
      type="button"
    >
      <div
        style={
          Object {
            "borderRadius": "10px",
            "height": "20px",
            "width": "20px",
          }
        }
      />
    </button>
    <p>
      Medium without label:
    </p>
    <button
      className="theme-tc-pie-chart-loading tc-pie-chart-loading theme-tc-pie-chart-loading-no-label tc-pie-chart-loading-no-label btn btn-default"
      disabled={false}
      type="button"
    >
      <div
        style={
          Object {
            "borderRadius": "17.5px",
            "height": "35px",
            "width": "35px",
          }
        }
      />
    </button>
    <p>
      Large without label:
    </p>
    <button
      className="theme-tc-pie-chart-loading tc-pie-chart-loading theme-tc-pie-chart-loading-no-label tc-pie-chart-loading-no-label btn btn-default"
      disabled={false}
      type="button"
    >
      <div
        style={
          Object {
            "borderRadius": "25px",
            "height": "50px",
            "width": "50px",
          }
        }
      />
    </button>
    <p>
      after large
    </p>
  </div>
</div>
`;

exports[`Storyshots PieChartButton default 1`] = `
<div
  className="col-lg-offset-2 col-lg-8"
>
  <div>
    <p>
      Small :
    </p>
    <button
      className="theme-tc-pie-chart tc-pie-chart btn btn-default"
      disabled={false}
      onClick={[Function]}
      onMouseDown={null}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        height={20}
        width={20}
      >
        <path
          d="M1.0798635081746981,-8.934981522292736A9,9,0,0,1,3.2679771569343448,8.385721513486798L2.5137114511013143,5.448050544974975A6,6,0,0,0,1.079863508174698,-5.902024635979812Z"
          fill="#C3D600"
          stroke="#C3D600"
          transform="translate(10,10)"
        />
        <path
          d="M1.1761019362637408,8.922823781489617A9,9,0,0,1,-1.734049908655706,8.83136857538463L-0.7968146875784861,5.946855165014463A6,6,0,0,0,0.4218362304307106,5.985152812977795Z"
          fill="#F3C446"
          stroke="#F3C446"
          transform="translate(10,10)"
        />
        <path
          d="M-3.788072360973488,8.163976224121965A9,9,0,0,1,-4.378222438590741,7.863279740554863L-2.7239429984372805,5.346039145130208Z"
          fill="#66BDFF"
          stroke="#66BDFF"
          transform="translate(10,10)"
        />
        <path
          d="M-6.125478298028102,6.593824051367063A9,9,0,0,1,-6.593824051367061,6.125478298028103L-4.242640687119285,4.242640687119286Z"
          fill="#E96065"
          stroke="#E96065"
          transform="translate(10,10)"
        />
        <path
          d="M-7.863279740554862,4.3782224385907424A9,9,0,0,1,-8.163976224121967,3.7880723609734854L-5.346039145130207,2.7239429984372814Z"
          fill="#60769E"
          stroke="#60769E"
          transform="translate(10,10)"
        />
        <path
          d="M-8.83136857538463,1.7340499086557037A9,9,0,0,1,-1.0798635081746992,-8.934981522292736L-1.0798635081746997,-5.902024635979812A6,6,0,0,0,-5.946855165014464,0.7968146875784833Z"
          fill="#ABABAB"
          stroke="#ABABAB"
          transform="translate(10,10)"
        />
      </svg>
      <div
        className="theme-tc-pie-chart-label tc-pie-chart-label"
        style={
          Object {
            "color": "#C3D600",
          }
        }
      >
        50 %
      </div>
    </button>
    <p>
      custom size
    </p>
    <button
      className="theme-tc-pie-chart tc-pie-chart btn btn-default"
      disabled={false}
      onClick={[Function]}
      onMouseDown={null}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        height="25"
        width="25"
      >
        <path
          d="M1.2450560974866847,-10.929310834362395A11,11,0,0,1,3.9239494488733375,10.276313576506247L3.1712173817861413,7.3446157365418A8,8,0,0,0,1.2450560974866853,-7.902520820226368Z"
          fill="#C3D600"
          stroke="#C3D600"
          transform="translate(12.5,12.5)"
        />
        <path
          d="M1.512068707501079,10.895579297302003A11,11,0,0,1,-2.1932240699564955,10.779135780709113L-1.2578945171840736,7.900487414307945A8,8,0,0,0,0.7593366404138804,7.963881457337556Z"
          fill="#F3C446"
          stroke="#F3C446"
          transform="translate(12.5,12.5)"
        />
        <path
          d="M-4.561461499291944,10.00964879456204A11,11,0,0,1,-5.416816184341679,9.573823814184909L-3.6377136522463975,7.125099254344474A8,8,0,0,0,-3.626131946519525,7.1310004281608705Z"
          fill="#66BDFF"
          stroke="#66BDFF"
          transform="translate(12.5,12.5)"
        />
        <path
          d="M-7.43135926797544,8.11017258942592A11,11,0,0,1,-8.110172589425918,7.431359267975441L-5.661448029585487,5.652256735880157A8,8,0,0,0,-5.652256735880156,5.661448029585488Z"
          fill="#E96065"
          stroke="#E96065"
          transform="translate(12.5,12.5)"
        />
        <path
          d="M-9.573823814184907,5.41681618434168A11,11,0,0,1,-10.00964879456204,4.561461499291944L-7.131000428160871,3.6261319465195228A8,8,0,0,0,-7.125099254344473,3.637713652246399Z"
          fill="#60769E"
          stroke="#60769E"
          transform="translate(12.5,12.5)"
        />
        <path
          d="M-10.779135780709115,2.19322406995649A11,11,0,0,1,-1.2450560974866882,-10.929310834362393L-1.2450560974866864,-7.902520820226368A8,8,0,0,0,-7.900487414307946,1.2578945171840716Z"
          fill="#ABABAB"
          stroke="#ABABAB"
          transform="translate(12.5,12.5)"
        />
      </svg>
      <div
        className="theme-tc-pie-chart-label tc-pie-chart-label"
        style={
          Object {
            "color": "#C3D600",
          }
        }
      >
        50 %
      </div>
    </button>
    <p>
      Medium :
    </p>
    <button
      className="theme-tc-pie-chart tc-pie-chart btn btn-default"
      disabled={false}
      onClick={null}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        height={35}
        width={35}
      >
        <path
          d="M1.4985941454548493,-15.92966464139181A16,16,0,0,1,5.413059556895222,15.056519725139182L4.412429259459025,11.159322023773214A12,12,0,0,0,1.4985941454548493,-11.90605793649638Z"
          fill="#C3D600"
          stroke="#C3D600"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M2.510033447588189,15.801890143017339A16,16,0,0,1,-3.497289361567177,15.61310241820853L-2.253926511073504,11.786425042508862A12,12,0,0,0,1.5094031501519916,11.90469244165137Z"
          fill="#F3C446"
          stroke="#F3C446"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M-6.347784816200377,14.68692030097583A16,16,0,0,1,-8.1508338188312,13.768220947449876L-5.785817136668552,10.51305474450849A12,12,0,0,0,-5.104421965706705,10.860242925276161Z"
          fill="#66BDFF"
          stroke="#66BDFF"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M-10.575610081518743,12.006517871709478A16,16,0,0,1,-12.006517871709477,10.575610081518747L-8.751351668768088,8.210593399356103A12,12,0,0,0,-8.210593399356101,8.75135166876809Z"
          fill="#E96065"
          stroke="#E96065"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M-13.768220947449874,8.150833818831204A16,16,0,0,1,-14.686920300975832,6.347784816200371L-10.860242925276161,5.1044219657067025A12,12,0,0,0,-10.51305474450849,5.785817136668554Z"
          fill="#60769E"
          stroke="#60769E"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M-15.61310241820853,3.497289361567176A16,16,0,0,1,-1.4985941454548477,-15.92966464139181L-1.4985941454548453,-11.906057936496381A12,12,0,0,0,-11.786425042508862,2.2539265110735007Z"
          fill="#ABABAB"
          stroke="#ABABAB"
          transform="translate(17.5,17.5)"
        />
      </svg>
      <div
        className="theme-tc-pie-chart-label tc-pie-chart-label"
        style={
          Object {
            "color": "#C3D600",
          }
        }
      >
        50 %
      </div>
    </button>
    <p>
      Large : 
    </p>
    <button
      className="theme-tc-pie-chart tc-pie-chart btn btn-default"
      disabled={false}
      onClick={null}
      onMouseDown={null}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        height={50}
        width={50}
      >
        <path
          d="M1.459699800959779,-22.95363318716839A23,23,0,0,1,7.122177094852827,21.869490013019366L5.875515187472818,17.014062456737847A18,18,0,0,0,1.4596998009597788,-17.940715606995113Z"
          fill="#C3D600"
          stroke="#C3D600"
          transform="translate(25,25)"
        />
        <path
          d="M4.294495799827917,22.59551517060986A23,23,0,0,1,-5.704805729946293,22.281274460487488L-4.155729006271811,17.51370653021316A18,18,0,0,0,3.047833892447908,17.740087614328342Z"
          fill="#F3C446"
          stroke="#F3C446"
          transform="translate(25,25)"
        />
        <path
          d="M-8.481319745021363,21.379130370122887A23,23,0,0,1,-12.310885128286468,19.42786934684643L-9.364366103702945,15.37233383308531A18,18,0,0,0,-6.932243021346881,16.61156243984856Z"
          fill="#66BDFF"
          stroke="#66BDFF"
          transform="translate(25,25)"
        />
        <path
          d="M-14.672729019610838,17.711889315289604A23,23,0,0,1,-17.7118893152896,14.67272901961084L-13.656353801528482,11.726209995027318A18,18,0,0,0,-11.726209995027316,13.656353801528484Z"
          fill="#E96065"
          stroke="#E96065"
          transform="translate(25,25)"
        />
        <path
          d="M-19.427869346846425,12.310885128286472A23,23,0,0,1,-21.37913037012289,8.481319745021352L-16.611562439848562,6.932243021346873A18,18,0,0,0,-15.372333833085309,9.364366103702949Z"
          fill="#60769E"
          stroke="#60769E"
          transform="translate(25,25)"
        />
        <path
          d="M-22.281274460487488,5.704805729946293A23,23,0,0,1,-1.459699800959787,-22.953633187168386L-1.4596998009597768,-17.940715606995113A18,18,0,0,0,-17.51370653021316,4.155729006271811Z"
          fill="#ABABAB"
          stroke="#ABABAB"
          transform="translate(25,25)"
        />
      </svg>
      <div
        className="theme-tc-pie-chart-label tc-pie-chart-label"
        style={
          Object {
            "color": "#C3D600",
          }
        }
      >
        50 %
      </div>
    </button>
    <p>
      with other data :
    </p>
    <button
      className="theme-tc-pie-chart tc-pie-chart btn btn-default"
      disabled={false}
      onClick={null}
      onMouseDown={null}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        height={35}
        width={35}
      >
        <path
          d="M1.4985941454548493,-15.92966464139181A16,16,0,0,1,11.318777699959778,-11.308637025693823L8.218535450116393,-8.7438935866798A12,12,0,0,0,1.4985941454548493,-11.90605793649638Z"
          fill="#F3C446"
          stroke="#F3C446"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M13.229257418379492,-8.999263756455369A16,16,0,0,1,15.928315026628562,1.512871578316787L11.975977458463314,0.7589228645775445A12,12,0,0,0,10.129015168536107,-6.434520317441346Z"
          fill="#60769E"
          stroke="#60769E"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M15.366697944616963,4.456971424510686A16,16,0,1,1,-12.63808405415157,-9.812177711405345L-9.705000997200361,-7.057829386173909A12,12,0,1,0,11.414360376451713,3.703022710771445Z"
          fill="#C3D600"
          stroke="#C3D600"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M-10.586367483685988,-11.997033945953307A16,16,0,0,1,-8.987402528535393,-13.237318300549989L-7.049015215311723,-9.711404867180846A12,12,0,0,0,-7.653284426734781,-9.242685620721874Z"
          fill="#E96065"
          stroke="#E96065"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M-6.360946407861981,-14.681224771670372A16,16,0,0,1,-1.4985941454548477,-15.92966464139181L-1.4985941454548453,-11.906057936496381A12,12,0,0,0,-4.422559094638314,-11.155311338301228Z"
          fill="#ABABAB"
          stroke="#ABABAB"
          transform="translate(17.5,17.5)"
        />
      </svg>
      <div
        className="theme-tc-pie-chart-label tc-pie-chart-label"
        style={
          Object {
            "color": "#F3C446",
          }
        }
      >
        15 %
      </div>
    </button>
    <p>
      with without label :
    </p>
    <button
      className="theme-tc-pie-chart tc-pie-chart btn btn-default"
      disabled={false}
      onClick={null}
      onMouseDown={null}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        height={35}
        width={35}
      >
        <path
          d="M1.4985941454548493,-15.92966464139181A16,16,0,0,1,11.318777699959778,-11.308637025693823L8.218535450116393,-8.7438935866798A12,12,0,0,0,1.4985941454548493,-11.90605793649638Z"
          fill="#F3C446"
          stroke="#F3C446"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M13.229257418379492,-8.999263756455369A16,16,0,0,1,15.928315026628562,1.512871578316787L11.975977458463314,0.7589228645775445A12,12,0,0,0,10.129015168536107,-6.434520317441346Z"
          fill="#60769E"
          stroke="#60769E"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M15.366697944616963,4.456971424510686A16,16,0,1,1,-12.63808405415157,-9.812177711405345L-9.705000997200361,-7.057829386173909A12,12,0,1,0,11.414360376451713,3.703022710771445Z"
          fill="#C3D600"
          stroke="#C3D600"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M-10.586367483685988,-11.997033945953307A16,16,0,0,1,-8.987402528535393,-13.237318300549989L-7.049015215311723,-9.711404867180846A12,12,0,0,0,-7.653284426734781,-9.242685620721874Z"
          fill="#E96065"
          stroke="#E96065"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M-6.360946407861981,-14.681224771670372A16,16,0,0,1,-1.4985941454548477,-15.92966464139181L-1.4985941454548453,-11.906057936496381A12,12,0,0,0,-4.422559094638314,-11.155311338301228Z"
          fill="#ABABAB"
          stroke="#ABABAB"
          transform="translate(17.5,17.5)"
        />
      </svg>
      <div
        className="theme-tc-pie-chart-label tc-pie-chart-label"
        style={
          Object {
            "color": "#F3C446",
          }
        }
      />
    </button>
    <p>
      with overlay component
    </p>
    <span>
      <button
        className="theme-tc-pie-chart tc-pie-chart btn btn-default"
        disabled={false}
        onClick={[Function]}
        onMouseDown={null}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          height={35}
          width={35}
        >
          <path
            d="M1.4985941454548493,-15.92966464139181A16,16,0,0,1,11.318777699959778,-11.308637025693823L8.218535450116393,-8.7438935866798A12,12,0,0,0,1.4985941454548493,-11.90605793649638Z"
            fill="#F3C446"
            stroke="#F3C446"
            transform="translate(17.5,17.5)"
          />
          <path
            d="M13.229257418379492,-8.999263756455369A16,16,0,0,1,15.928315026628562,1.512871578316787L11.975977458463314,0.7589228645775445A12,12,0,0,0,10.129015168536107,-6.434520317441346Z"
            fill="#60769E"
            stroke="#60769E"
            transform="translate(17.5,17.5)"
          />
          <path
            d="M15.366697944616963,4.456971424510686A16,16,0,1,1,-12.63808405415157,-9.812177711405345L-9.705000997200361,-7.057829386173909A12,12,0,1,0,11.414360376451713,3.703022710771445Z"
            fill="#C3D600"
            stroke="#C3D600"
            transform="translate(17.5,17.5)"
          />
          <path
            d="M-10.586367483685988,-11.997033945953307A16,16,0,0,1,-8.987402528535393,-13.237318300549989L-7.049015215311723,-9.711404867180846A12,12,0,0,0,-7.653284426734781,-9.242685620721874Z"
            fill="#E96065"
            stroke="#E96065"
            transform="translate(17.5,17.5)"
          />
          <path
            d="M-6.360946407861981,-14.681224771670372A16,16,0,0,1,-1.4985941454548477,-15.92966464139181L-1.4985941454548453,-11.906057936496381A12,12,0,0,0,-4.422559094638314,-11.155311338301228Z"
            fill="#ABABAB"
            stroke="#ABABAB"
            transform="translate(17.5,17.5)"
          />
        </svg>
        <div
          className="theme-tc-pie-chart-label tc-pie-chart-label"
          style={
            Object {
              "color": "#C3D600",
            }
          }
        >
          60 %
        </div>
      </button>
    </span>
    <p>
      with a tooltip
    </p>
    <button
      className="theme-tc-pie-chart tc-pie-chart btn btn-default"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={null}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <svg
        height={35}
        width={35}
      >
        <path
          d="M1.4985941454548493,-15.92966464139181A16,16,0,0,1,11.318777699959778,-11.308637025693823L8.218535450116393,-8.7438935866798A12,12,0,0,0,1.4985941454548493,-11.90605793649638Z"
          fill="#F3C446"
          stroke="#F3C446"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M13.229257418379492,-8.999263756455369A16,16,0,0,1,15.928315026628562,1.512871578316787L11.975977458463314,0.7589228645775445A12,12,0,0,0,10.129015168536107,-6.434520317441346Z"
          fill="#60769E"
          stroke="#60769E"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M15.366697944616963,4.456971424510686A16,16,0,1,1,-12.63808405415157,-9.812177711405345L-9.705000997200361,-7.057829386173909A12,12,0,1,0,11.414360376451713,3.703022710771445Z"
          fill="#C3D600"
          stroke="#C3D600"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M-10.586367483685988,-11.997033945953307A16,16,0,0,1,-8.987402528535393,-13.237318300549989L-7.049015215311723,-9.711404867180846A12,12,0,0,0,-7.653284426734781,-9.242685620721874Z"
          fill="#E96065"
          stroke="#E96065"
          transform="translate(17.5,17.5)"
        />
        <path
          d="M-6.360946407861981,-14.681224771670372A16,16,0,0,1,-1.4985941454548477,-15.92966464139181L-1.4985941454548453,-11.906057936496381A12,12,0,0,0,-4.422559094638314,-11.155311338301228Z"
          fill="#ABABAB"
          stroke="#ABABAB"
          transform="translate(17.5,17.5)"
        />
      </svg>
      <div
        className="theme-tc-pie-chart-label tc-pie-chart-label"
        style={
          Object {
            "color": "#F3C446",
          }
        }
      >
        15 %
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots PieChartButton lot of loading 1`] = `
<div
  className="col-lg-offset-2 col-lg-8"
>
  <div>
    <div>
      <div>
        <p>
          20
          px
        </p>
        <button
          className="theme-tc-pie-chart-loading tc-pie-chart-loading btn btn-default"
          disabled={false}
          type="button"
        >
          <div
            style={
              Object {
                "borderRadius": "10px",
                "height": "20px",
                "width": "20px",
              }
            }
          />
          <div
            className="theme-tc-pie-chart-loading-skeleton-label tc-pie-chart-loading-skeleton-label"
          />
        </button>
      </div>
      <div>
        <p>
          22
          px
        </p>
        <button
          className="theme-tc-pie-chart-loading tc-pie-chart-loading btn btn-default"
          disabled={false}
          type="button"
        >
          <div
            style={
              Object {
                "borderRadius": "11px",
                "height": "22px",
                "width": "22px",
              }
            }
          />
          <div
            className="theme-tc-pie-chart-loading-skeleton-label tc-pie-chart-loading-skeleton-label"
          />
        </button>
      </div>
      <div>
        <p>
          25
          px
        </p>
        <button
          className="theme-tc-pie-chart-loading tc-pie-chart-loading btn btn-default"
          disabled={false}
          type="button"
        >
          <div
            style={
              Object {
                "borderRadius": "12.5px",
                "height": "25px",
                "width": "25px",
              }
            }
          />
          <div
            className="theme-tc-pie-chart-loading-skeleton-label tc-pie-chart-loading-skeleton-label"
          />
        </button>
      </div>
      <div>
        <p>
          30
          px
        </p>
        <button
          className="theme-tc-pie-chart-loading tc-pie-chart-loading btn btn-default"
          disabled={false}
          type="button"
        >
          <div
            style={
              Object {
                "borderRadius": "15px",
                "height": "30px",
                "width": "30px",
              }
            }
          />
          <div
            className="theme-tc-pie-chart-loading-skeleton-label tc-pie-chart-loading-skeleton-label"
          />
        </button>
      </div>
      <div>
        <p>
          35
          px
        </p>
        <button
          className="theme-tc-pie-chart-loading tc-pie-chart-loading btn btn-default"
          disabled={false}
          type="button"
        >
          <div
            style={
              Object {
                "borderRadius": "17.5px",
                "height": "35px",
                "width": "35px",
              }
            }
          />
          <div
            className="theme-tc-pie-chart-loading-skeleton-label tc-pie-chart-loading-skeleton-label"
          />
        </button>
      </div>
      <div>
        <p>
          40
          px
        </p>
        <button
          className="theme-tc-pie-chart-loading tc-pie-chart-loading btn btn-default"
          disabled={false}
          type="button"
        >
          <div
            style={
              Object {
                "borderRadius": "20px",
                "height": "40px",
                "width": "40px",
              }
            }
          />
          <div
            className="theme-tc-pie-chart-loading-skeleton-label tc-pie-chart-loading-skeleton-label"
          />
        </button>
      </div>
      <div>
        <p>
          45
          px
        </p>
        <button
          className="theme-tc-pie-chart-loading tc-pie-chart-loading btn btn-default"
          disabled={false}
          type="button"
        >
          <div
            style={
              Object {
                "borderRadius": "22.5px",
                "height": "45px",
                "width": "45px",
              }
            }
          />
          <div
            className="theme-tc-pie-chart-loading-skeleton-label tc-pie-chart-loading-skeleton-label"
          />
        </button>
      </div>
      <div>
        <p>
          50
          px
        </p>
        <button
          className="theme-tc-pie-chart-loading tc-pie-chart-loading btn btn-default"
          disabled={false}
          type="button"
        >
          <div
            style={
              Object {
                "borderRadius": "25px",
                "height": "50px",
                "width": "50px",
              }
            }
          />
          <div
            className="theme-tc-pie-chart-loading-skeleton-label tc-pie-chart-loading-skeleton-label"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PieChartButton lot of sizes 1`] = `
<div
  className="col-lg-offset-2 col-lg-8"
>
  <div>
    <div>
      <p>
        20
        px
      </p>
      <button
        className="theme-tc-pie-chart tc-pie-chart btn btn-default"
        disabled={false}
        onClick={null}
        onMouseDown={null}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          height={20}
          width={20}
        >
          <path
            d="M1.0798635081746981,-8.934981522292736A9,9,0,0,1,3.2679771569343448,8.385721513486798L2.5137114511013143,5.448050544974975A6,6,0,0,0,1.079863508174698,-5.902024635979812Z"
            fill="#C3D600"
            stroke="#C3D600"
            transform="translate(10,10)"
          />
          <path
            d="M1.1761019362637408,8.922823781489617A9,9,0,0,1,-1.734049908655706,8.83136857538463L-0.7968146875784861,5.946855165014463A6,6,0,0,0,0.4218362304307106,5.985152812977795Z"
            fill="#F3C446"
            stroke="#F3C446"
            transform="translate(10,10)"
          />
          <path
            d="M-3.788072360973488,8.163976224121965A9,9,0,0,1,-4.378222438590741,7.863279740554863L-2.7239429984372805,5.346039145130208Z"
            fill="#66BDFF"
            stroke="#66BDFF"
            transform="translate(10,10)"
          />
          <path
            d="M-6.125478298028102,6.593824051367063A9,9,0,0,1,-6.593824051367061,6.125478298028103L-4.242640687119285,4.242640687119286Z"
            fill="#E96065"
            stroke="#E96065"
            transform="translate(10,10)"
          />
          <path
            d="M-7.863279740554862,4.3782224385907424A9,9,0,0,1,-8.163976224121967,3.7880723609734854L-5.346039145130207,2.7239429984372814Z"
            fill="#60769E"
            stroke="#60769E"
            transform="translate(10,10)"
          />
          <path
            d="M-8.83136857538463,1.7340499086557037A9,9,0,0,1,-1.0798635081746992,-8.934981522292736L-1.0798635081746997,-5.902024635979812A6,6,0,0,0,-5.946855165014464,0.7968146875784833Z"
            fill="#ABABAB"
            stroke="#ABABAB"
            transform="translate(10,10)"
          />
        </svg>
        <div
          className="theme-tc-pie-chart-label tc-pie-chart-label"
          style={
            Object {
              "color": "#C3D600",
            }
          }
        >
          50 %
        </div>
      </button>
    </div>
    <div>
      <p>
        22
        px
      </p>
      <button
        className="theme-tc-pie-chart tc-pie-chart btn btn-default"
        disabled={false}
        onClick={null}
        onMouseDown={null}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          height={22}
          width={22}
        >
          <path
            d="M1.0439821900023,-8.939245000947116A9,9,0,0,1,3.2342834003789487,8.398774368086881L2.4805620635094314,5.463223576706141A6,6,0,0,0,1.0439821900023012,-5.908477061558079Z"
            fill="#C3D600"
            stroke="#C3D600"
            transform="translate(11,11)"
          />
          <path
            d="M1.2119162608701117,8.91802999415446A9,9,0,0,1,-1.7694925574761828,8.824335447445117L-0.8329337581982279,5.941903849310739A6,6,0,0,0,0.4581949240005917,5.982479202773721Z"
            fill="#F3C446"
            stroke="#F3C446"
            transform="translate(11,11)"
          />
          <path
            d="M-3.7552646868717288,8.179118970374143A9,9,0,0,1,-4.409757044649291,7.845638457586861L-2.7239429984372805,5.346039145130208Z"
            fill="#66BDFF"
            stroke="#66BDFF"
            transform="translate(11,11)"
          />
          <path
            d="M-6.098955711722566,6.618363787708158A9,9,0,0,1,-6.618363787708157,6.098955711722567L-4.242640687119285,4.242640687119286Z"
            fill="#E96065"
            stroke="#E96065"
            transform="translate(11,11)"
          />
          <path
            d="M-7.84563845758686,4.409757044649293A9,9,0,0,1,-8.179118970374143,3.755264686871727L-5.346039145130207,2.7239429984372814Z"
            fill="#60769E"
            stroke="#60769E"
            transform="translate(11,11)"
          />
          <path
            d="M-8.824335447445117,1.7694925574761786A9,9,0,0,1,-1.0439821900023032,-8.939245000947116L-1.0439821900023007,-5.908477061558079A6,6,0,0,0,-5.941903849310739,0.8329337581982277Z"
            fill="#ABABAB"
            stroke="#ABABAB"
            transform="translate(11,11)"
          />
        </svg>
        <div
          className="theme-tc-pie-chart-label tc-pie-chart-label"
          style={
            Object {
              "color": "#C3D600",
            }
          }
        >
          50 %
        </div>
      </button>
    </div>
    <div>
      <p>
        25
        px
      </p>
      <button
        className="theme-tc-pie-chart tc-pie-chart btn btn-default"
        disabled={false}
        onClick={null}
        onMouseDown={null}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          height={25}
          width={25}
        >
          <path
            d="M1.2450560974866847,-10.929310834362395A11,11,0,0,1,3.9239494488733375,10.276313576506247L3.1712173817861413,7.3446157365418A8,8,0,0,0,1.2450560974866853,-7.902520820226368Z"
            fill="#C3D600"
            stroke="#C3D600"
            transform="translate(12.5,12.5)"
          />
          <path
            d="M1.512068707501079,10.895579297302003A11,11,0,0,1,-2.1932240699564955,10.779135780709113L-1.2578945171840736,7.900487414307945A8,8,0,0,0,0.7593366404138804,7.963881457337556Z"
            fill="#F3C446"
            stroke="#F3C446"
            transform="translate(12.5,12.5)"
          />
          <path
            d="M-4.561461499291944,10.00964879456204A11,11,0,0,1,-5.416816184341679,9.573823814184909L-3.6377136522463975,7.125099254344474A8,8,0,0,0,-3.626131946519525,7.1310004281608705Z"
            fill="#66BDFF"
            stroke="#66BDFF"
            transform="translate(12.5,12.5)"
          />
          <path
            d="M-7.43135926797544,8.11017258942592A11,11,0,0,1,-8.110172589425918,7.431359267975441L-5.661448029585487,5.652256735880157A8,8,0,0,0,-5.652256735880156,5.661448029585488Z"
            fill="#E96065"
            stroke="#E96065"
            transform="translate(12.5,12.5)"
          />
          <path
            d="M-9.573823814184907,5.41681618434168A11,11,0,0,1,-10.00964879456204,4.561461499291944L-7.131000428160871,3.6261319465195228A8,8,0,0,0,-7.125099254344473,3.637713652246399Z"
            fill="#60769E"
            stroke="#60769E"
            transform="translate(12.5,12.5)"
          />
          <path
            d="M-10.779135780709115,2.19322406995649A11,11,0,0,1,-1.2450560974866882,-10.929310834362393L-1.2450560974866864,-7.902520820226368A8,8,0,0,0,-7.900487414307946,1.2578945171840716Z"
            fill="#ABABAB"
            stroke="#ABABAB"
            transform="translate(12.5,12.5)"
          />
        </svg>
        <div
          className="theme-tc-pie-chart-label tc-pie-chart-label"
          style={
            Object {
              "color": "#C3D600",
            }
          }
        >
          50 %
        </div>
      </button>
    </div>
    <div>
      <p>
        30
        px
      </p>
      <button
        className="theme-tc-pie-chart tc-pie-chart btn btn-default"
        disabled={false}
        onClick={null}
        onMouseDown={null}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          height={30}
          width={30}
        >
          <path
            d="M1.3651869303456519,-12.928119145692207A13,13,0,0,1,4.537389564121677,12.182450325915543L3.785912340994002,9.255639780496502A10,10,0,0,0,1.3651869303456516,-9.906374949759039Z"
            fill="#C3D600"
            stroke="#C3D600"
            transform="translate(15,15)"
          />
          <path
            d="M1.8927954190703105,12.861466693248731A13,13,0,0,1,-2.6966385952568146,12.717237918926081L-1.7628682860596037,9.843388410806783A10,10,0,0,0,1.1413181959426364,9.934656147829688Z"
            fill="#F3C446"
            stroke="#F3C446"
            transform="translate(15,15)"
          />
          <path
            d="M-5.293378447389233,11.873505994975332A13,13,0,0,1,-6.494498346569646,11.26150483844873L-4.718361671999755,8.816862431284934A10,10,0,0,0,-4.35960813819202,8.999656486856034Z"
            fill="#66BDFF"
            stroke="#66BDFF"
            transform="translate(15,15)"
          />
          <path
            d="M-8.703417200866046,9.656631349889517A13,13,0,0,1,-9.656631349889516,8.703417200866047L-7.211988942725725,6.927280526296151A10,10,0,0,0,-6.92728052629615,7.211988942725726Z"
            fill="#E96065"
            stroke="#E96065"
            transform="translate(15,15)"
          />
          <path
            d="M-11.261504838448728,6.494498346569649A13,13,0,0,1,-11.873505994975334,5.293378447389229L-8.999656486856036,4.3596081381920175A10,10,0,0,0,-8.816862431284934,4.718361671999757Z"
            fill="#60769E"
            stroke="#60769E"
            transform="translate(15,15)"
          />
          <path
            d="M-12.717237918926083,2.696638595256811A13,13,0,0,1,-1.3651869303456476,-12.928119145692209L-1.3651869303456508,-9.90637494975904A10,10,0,0,0,-9.843388410806783,1.7628682860596032Z"
            fill="#ABABAB"
            stroke="#ABABAB"
            transform="translate(15,15)"
          />
        </svg>
        <div
          className="theme-tc-pie-chart-label tc-pie-chart-label"
          style={
            Object {
              "color": "#C3D600",
            }
          }
        >
          50 %
        </div>
      </button>
    </div>
    <div>
      <p>
        35
        px
      </p>
      <button
        className="theme-tc-pie-chart tc-pie-chart btn btn-default"
        disabled={false}
        onClick={null}
        onMouseDown={null}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          height={35}
          width={35}
        >
          <path
            d="M1.4985941454548493,-15.92966464139181A16,16,0,0,1,5.413059556895222,15.056519725139182L4.412429259459025,11.159322023773214A12,12,0,0,0,1.4985941454548493,-11.90605793649638Z"
            fill="#C3D600"
            stroke="#C3D600"
            transform="translate(17.5,17.5)"
          />
          <path
            d="M2.510033447588189,15.801890143017339A16,16,0,0,1,-3.497289361567177,15.61310241820853L-2.253926511073504,11.786425042508862A12,12,0,0,0,1.5094031501519916,11.90469244165137Z"
            fill="#F3C446"
            stroke="#F3C446"
            transform="translate(17.5,17.5)"
          />
          <path
            d="M-6.347784816200377,14.68692030097583A16,16,0,0,1,-8.1508338188312,13.768220947449876L-5.785817136668552,10.51305474450849A12,12,0,0,0,-5.104421965706705,10.860242925276161Z"
            fill="#66BDFF"
            stroke="#66BDFF"
            transform="translate(17.5,17.5)"
          />
          <path
            d="M-10.575610081518743,12.006517871709478A16,16,0,0,1,-12.006517871709477,10.575610081518747L-8.751351668768088,8.210593399356103A12,12,0,0,0,-8.210593399356101,8.75135166876809Z"
            fill="#E96065"
            stroke="#E96065"
            transform="translate(17.5,17.5)"
          />
          <path
            d="M-13.768220947449874,8.150833818831204A16,16,0,0,1,-14.686920300975832,6.347784816200371L-10.860242925276161,5.1044219657067025A12,12,0,0,0,-10.51305474450849,5.785817136668554Z"
            fill="#60769E"
            stroke="#60769E"
            transform="translate(17.5,17.5)"
          />
          <path
            d="M-15.61310241820853,3.497289361567176A16,16,0,0,1,-1.4985941454548477,-15.92966464139181L-1.4985941454548453,-11.906057936496381A12,12,0,0,0,-11.786425042508862,2.2539265110735007Z"
            fill="#ABABAB"
            stroke="#ABABAB"
            transform="translate(17.5,17.5)"
          />
        </svg>
        <div
          className="theme-tc-pie-chart-label tc-pie-chart-label"
          style={
            Object {
              "color": "#C3D600",
            }
          }
        >
          50 %
        </div>
      </button>
    </div>
    <div>
      <p>
        40
        px
      </p>
      <button
        className="theme-tc-pie-chart tc-pie-chart btn btn-default"
        disabled={false}
        onClick={null}
        onMouseDown={null}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          height={40}
          width={40}
        >
          <path
            d="M1.5191080511646864,-17.935782969496664A18,18,0,0,1,5.931830321190495,16.99451055607678L4.932483817753618,13.102312902216871A14,14,0,0,0,1.5191080511646857,-13.917338493005285Z"
            fill="#C3D600"
            stroke="#C3D600"
            transform="translate(20,20)"
          />
          <path
            d="M2.9890653646044045,17.750084175747514A18,18,0,0,1,-4.097704133978629,17.527373472097135L-2.855936499790654,13.705605667359743A14,14,0,0,0,1.9897188611675296,13.857886521887606Z"
            fill="#F3C446"
            stroke="#F3C446"
            transform="translate(20,20)"
          />
          <path
            d="M-6.98721935601184,16.588513063893746A18,18,0,0,1,-9.313404488104599,15.403262538856927L-6.951422087666821,12.152272666423258A14,14,0,0,0,-5.745451721823864,12.766745259156353Z"
            fill="#66BDFF"
            stroke="#66BDFF"
            transform="translate(20,20)"
          />
          <path
            d="M-11.771372947472681,13.617443920630198A18,18,0,0,1,-13.617443920630196,11.771372947472683L-10.366454048196534,9.409390547034898A14,14,0,0,0,-9.409390547034896,10.366454048196536Z"
            fill="#E96065"
            stroke="#E96065"
            transform="translate(20,20)"
          />
          <path
            d="M-15.403262538856925,9.3134044881046A18,18,0,0,1,-16.588513063893746,6.987219356011839L-12.766745259156355,5.745451721823859A14,14,0,0,0,-12.152272666423258,6.951422087666824Z"
            fill="#60769E"
            stroke="#60769E"
            transform="translate(20,20)"
          />
          <path
            d="M-17.52737347209714,4.097704133978622A18,18,0,0,1,-1.5191080511646926,-17.935782969496664L-1.5191080511646935,-13.917338493005284A14,14,0,0,0,-13.705605667359745,2.8559364997906505Z"
            fill="#ABABAB"
            stroke="#ABABAB"
            transform="translate(20,20)"
          />
        </svg>
        <div
          className="theme-tc-pie-chart-label tc-pie-chart-label"
          style={
            Object {
              "color": "#C3D600",
            }
          }
        >
          50 %
        </div>
      </button>
    </div>
    <div>
      <p>
        45
        px
      </p>
      <button
        className="theme-tc-pie-chart tc-pie-chart btn btn-default"
        disabled={false}
        onClick={null}
        onMouseDown={null}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          height={45}
          width={45}
        >
          <path
            d="M1.4932151392079036,-19.94417981637852A20,20,0,0,1,6.406218867909867,18.946249228183284L5.4079751596421595,15.058346677928935A16,16,0,0,0,1.4932151392079056,-15.930169758920973Z"
            fill="#C3D600"
            stroke="#C3D600"
            transform="translate(22.5,22.5)"
          />
          <path
            d="M3.5136127883516286,19.688944237148213A20,20,0,0,1,-4.7429585137565375,19.42947103080226L-3.5025611904101934,15.611920609182983A16,16,0,0,0,2.515369080083917,15.801041686893868Z"
            fill="#F3C446"
            stroke="#F3C446"
            transform="translate(22.5,22.5)"
          />
          <path
            d="M-7.5832224905050385,18.506613322255873A20,20,0,0,1,-10.514858341259348,17.0128702476463L-8.155482426932142,13.765467895571186A16,16,0,0,0,-6.342825167158698,14.68906290063659Z"
            fill="#66BDFF"
            stroke="#66BDFF"
            transform="translate(22.5,22.5)"
          />
          <path
            d="M-12.930931189013645,15.257490572993781A20,20,0,0,1,-15.25749057299378,12.93093118901365L-12.010088220918668,10.571555274686439A16,16,0,0,0,-10.571555274686437,12.01008822091867Z"
            fill="#E96065"
            stroke="#E96065"
            transform="translate(22.5,22.5)"
          />
          <path
            d="M-17.012870247646298,10.51485834125935A20,20,0,0,1,-18.506613322255873,7.583222490505037L-14.689062900636593,6.342825167158694A16,16,0,0,0,-13.765467895571184,8.155482426932144Z"
            fill="#60769E"
            stroke="#60769E"
            transform="translate(22.5,22.5)"
          />
          <path
            d="M-19.429471030802265,4.742958513756529A20,20,0,0,1,-1.4932151392079105,-19.94417981637852L-1.4932151392079005,-15.930169758920973A16,16,0,0,0,-15.611920609182983,3.5025611904101894Z"
            fill="#ABABAB"
            stroke="#ABABAB"
            transform="translate(22.5,22.5)"
          />
        </svg>
        <div
          className="theme-tc-pie-chart-label tc-pie-chart-label"
          style={
            Object {
              "color": "#C3D600",
            }
          }
        >
          50 %
        </div>
      </button>
    </div>
    <div>
      <p>
        50
        px
      </p>
      <button
        className="theme-tc-pie-chart tc-pie-chart btn btn-default"
        disabled={false}
        onClick={null}
        onMouseDown={null}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          height={50}
          width={50}
        >
          <path
            d="M1.459699800959779,-22.95363318716839A23,23,0,0,1,7.122177094852827,21.869490013019366L5.875515187472818,17.014062456737847A18,18,0,0,0,1.4596998009597788,-17.940715606995113Z"
            fill="#C3D600"
            stroke="#C3D600"
            transform="translate(25,25)"
          />
          <path
            d="M4.294495799827917,22.59551517060986A23,23,0,0,1,-5.704805729946293,22.281274460487488L-4.155729006271811,17.51370653021316A18,18,0,0,0,3.047833892447908,17.740087614328342Z"
            fill="#F3C446"
            stroke="#F3C446"
            transform="translate(25,25)"
          />
          <path
            d="M-8.481319745021363,21.379130370122887A23,23,0,0,1,-12.310885128286468,19.42786934684643L-9.364366103702945,15.37233383308531A18,18,0,0,0,-6.932243021346881,16.61156243984856Z"
            fill="#66BDFF"
            stroke="#66BDFF"
            transform="translate(25,25)"
          />
          <path
            d="M-14.672729019610838,17.711889315289604A23,23,0,0,1,-17.7118893152896,14.67272901961084L-13.656353801528482,11.726209995027318A18,18,0,0,0,-11.726209995027316,13.656353801528484Z"
            fill="#E96065"
            stroke="#E96065"
            transform="translate(25,25)"
          />
          <path
            d="M-19.427869346846425,12.310885128286472A23,23,0,0,1,-21.37913037012289,8.481319745021352L-16.611562439848562,6.932243021346873A18,18,0,0,0,-15.372333833085309,9.364366103702949Z"
            fill="#60769E"
            stroke="#60769E"
            transform="translate(25,25)"
          />
          <path
            d="M-22.281274460487488,5.704805729946293A23,23,0,0,1,-1.459699800959787,-22.953633187168386L-1.4596998009597768,-17.940715606995113A18,18,0,0,0,-17.51370653021316,4.155729006271811Z"
            fill="#ABABAB"
            stroke="#ABABAB"
            transform="translate(25,25)"
          />
        </svg>
        <div
          className="theme-tc-pie-chart-label tc-pie-chart-label"
          style={
            Object {
              "color": "#C3D600",
            }
          }
        >
          50 %
        </div>
      </button>
    </div>
  </div>
</div>
`;
